# pypomp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ANTIGRAVITY.md  CITATION.bib  CLAUDE.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_PLAN.md  DEVELOPER.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TEST_COVERAGE_ANALYSIS.md  fit.py  internal_functions.py  makefile  mop.py  perfilter.py  pfilter.py  pfilter_pf.py  pomp_class.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  tasks.md  test_coverage_runner.py  test_stat_models.py  test_strict.py  workflows.md
.github/workflows/: publish.yml  pyright.yml  ruff.yml  test-package.yml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
PompClass/src/: fit.py  pfilter.py  pfilter_pf.py  pomp_class.py
PompClass/test/: fit_internal_test.py  mop_test.py  perfilter_internal_test.py  pfilter_internal_test.py  pfilter_pf_internal_test.py
docs/: Makefile  requirements.txt
docs/source/: best_practices.rst  conf.py  index.rst  model_components.rst  model_mechanics.rst
pomp-class/: pomp_class.py
pypomp/: LG.py  ParTrans_class.py  ParamSet_class.py  RWSigma_class.py  SIR.py  SIS.py  __init__.py  benchmarks.py  binominvf.py  ctmc_multinom.py  dacca.py  dpop.py  fast_random.py  fit.py  gammainvf.py  internal_functions.py  maths.py  mcap.py  mcap_loess.py  mif.py  mif2_ivp.py  model_struct.py  mop.py  multinom.py  panelPomp_class.py  parameter_trans.py  parameters.py  perfilter.py  pfilter.py  pfilter_complete.py  pfilter_complete2.py  pfilter_pf.py  poissoninvf.py  pomp_class.py  proposals.py  results.py  rw_sd_class.py  simulate.py  spx.py  train.py  (+4 more)
pypomp/benchmarks/: __init__.py  base.py
pypomp/core/: analysis_mixin.py  estimation_mixin.py  interfaces.py  learning_rate.py  metadata.py  model_struct.py  optimizer.py  par_trans.py  parameters.py  pomp.py  results.py  rw_sigma.py  viz.py
pypomp/data/: Mesocosmdata.xls  SPX.csv
pypomp/functional/: __init__.py  abc.py  bif.py  dpop.py  mif.py  mop.py  pfilter.py  pmcmc.py  simulate.py  structs.py  train.py  utils.py
pypomp/measles/: measlesPomp.py  model_001b.py  model_001c.py  model_001d.py  model_002.py  model_002d.py  model_003.py
pypomp/models/: __init__.py  ctmc_multinom.py  dacca.py  linear_gaussian.py  sir.py  spx.py
pypomp/panel/: analysis_mixin.py  estimation_mixin.py  interfaces.py  panel.py  validation_mixin.py
pypomp/random/: __init__.py  (+8 more)
src/: fit.py  internal_functions.py  mop.py  perfilter.py  pfilter.py  pfilter_pf.py  pomp_class.py
test/: README  fit_internal_test.py  fit_test.py  mop_internal_test.py  mop_test.py  perfilter_internal_test.py  perfilter_test.py  pfilter_internal_test.py  pfilter_pf_internal_test.py  pfilter_pf_test.py  pfilter_test.py  pompclass_test.py  test_LG_utils.py  test_ParTrans.py  test_ParTrans_traces.py  test_RWSigma.py  test_benchmarks.py  test_core.py  test_ctmc_multinom.py  test_dacca.py  test_edge_cases.py  test_fit.py  test_fit_dacca.py  test_fit_internal.py  test_integration.py  test_measles.py  test_mif.py  test_mif_partrans_integration.py  test_model_struct.py  test_mop.py  test_mop_dacca.py  test_mop_internal.py  test_mop_partrans_integration.py  test_panelPomp_class.py  test_parameter_trans_unit.py  test_perfilter.py  test_perfilter_dacca.py  test_perfilter_internal.py  test_pfilter(new).ipynb  test_pfilter.py  (+15 more)
tests/: README  conftest.py  test_ParTrans.py  test_ParTrans_traces.py  test_RWSigma.py  test_accuracy.py  test_benchmarks.py  test_core.py  test_ctmc_multinom.py  test_filter_lg.py  test_functional.py  test_maths.py  test_mcap.py  test_model_struct.py  test_random.py  test_random_extra.py  test_random_heavy.py  test_util.py
vignettes/: intro_to_pypomp.qmd
(+192 files in other folders)
