[project]
name = "pypomp"

version = "0.1.1"

authors = [
    { name = "The pypomp core developer team", email = "pypomp-org@umich.edu" }
]
description = "Modeling and inference using partially observed Markov process (POMP) models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypomp/pypomp"
Issues = "https://github.com/pypomp/pypomp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ["E741"]