[project]
name = "pypomp"

version = "0.4.7.0"

authors = [
    { name = "The pypomp core developer team", email = "pypomp-org@umich.edu" }
]
description = "Modeling and inference using partially observed Markov process (POMP) models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["POMP", "state-space models", "particle filter", "iterated filtering", "JAX", "time series"]

dependencies = [
    "jax>=0.5.3",
    "tqdm>=4.66.4",
    "numpy>=1.24",
    "pandas",
    "xarray",
    "scipy",
    "typing_extensions",
    "loess",
    "cloudpickle"
]

[project.optional-dependencies]
benchmarks = ["statsmodels"]
tests = ["pytest", "pytest-xdist", "pandas-stubs", "scipy-stubs"]
viz = ["plotly"]


[project.urls]
Homepage = "https://github.com/pypomp/pypomp"
Issues = "https://github.com/pypomp/pypomp/issues"
Documentation = "https://pypomp.readthedocs.io"
Repository = "https://github.com/pypomp/pypomp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["E741"]

[tool.pyright]
include = ["."]
exclude = ["**/.venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "loess.*",
    "statsmodels.*",
    "matplotlib.*"
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["pypomp"]
omit = ["tests/*", "scratch.py", "scratch/*"]
